trunk/Archive2/62/288b01ffbaa598/output
+ g++ -std=c++11 -O0 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp: In function 'int main()':
main.cpp:31:29: error: no matching function for call to 'to_string(std::string&)'
     std::cout << to_string(s) << std::endl;
                             ^
main.cpp:31:29: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/string:52:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/basic_string.h:2883:3: note: std::string std::to_string(int)
   to_string(int __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2883:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2888:3: note: std::string std::to_string(unsigned int)
   to_string(unsigned __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2888:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'unsigned int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2894:3: note: std::string std::to_string(long int)
   to_string(long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2894:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2899:3: note: std::string std::to_string(long unsigned int)
   to_string(unsigned long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2899:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long unsigned int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2905:3: note: std::string std::to_string(long long int)
   to_string(long long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2905:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long long int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2911:3: note: std::string std::to_string(long long unsigned int)
   to_string(unsigned long long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2911:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long long unsigned int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2917:3: note: std::string std::to_string(float)
   to_string(float __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2917:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'float'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2926:3: note: std::string std::to_string(double)
   to_string(double __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2926:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'double'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2935:3: note: std::string std::to_string(long double)
   to_string(long double __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2935:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long double'
main.cpp:33:56: error: no matching function for call to 'to_string(std::string)'
     std::cout << to_string(std::string("Hello, World!")) << std::endl;
                                                        ^
main.cpp:33:56: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/string:52:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/basic_string.h:2883:3: note: std::string std::to_string(int)
   to_string(int __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2883:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2888:3: note: std::string std::to_string(unsigned int)
   to_string(unsigned __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2888:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'unsigned int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2894:3: note: std::string std::to_string(long int)
   to_string(long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2894:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2899:3: note: std::string std::to_string(long unsigned int)
   to_string(unsigned long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2899:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long unsigned int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2905:3: note: std::string std::to_string(long long int)
   to_string(long long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2905:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long long int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2911:3: note: std::string std::to_string(long long unsigned int)
   to_string(unsigned long long __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2911:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long long unsigned int'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2917:3: note: std::string std::to_string(float)
   to_string(float __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2917:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'float'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2926:3: note: std::string std::to_string(double)
   to_string(double __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2926:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'double'
/usr/local/include/c++/4.9.0/bits/basic_string.h:2935:3: note: std::string std::to_string(long double)
   to_string(long double __val)
   ^
/usr/local/include/c++/4.9.0/bits/basic_string.h:2935:3: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'long double'
